# clawmark

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
skills/: SKILL.md
src/: cli.rs  main.rs  mcp.rs
